# fire-detection-system

./: CMakeLists.txt  Kconfig  README.md
.github/workflows/: build-using-docker.yml  build-using-toolchain-bundle.yml  clang-format.yml  src-mirror.yml
app/: CMakeLists.txt  Kconfig  debug.conf  prj.conf  sample.yaml
app/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nrf9160dk_nrf9160.overlay
app/src/: app_common.h  app_fatal_error.h  main.c
app/src/modules/cloud/: CMakeLists.txt  Kconfig.cloud  cloud_module.c  cloud_module.h  cloud_shell.c
app/src/modules/controller/: CMakeLists.txt  Kconfig.controller  controller_module.c  controller_module.h  controller_shell.c
app/src/modules/network/: CMakeLists.txt  Kconfig.network  network_module.c  network_module.h  network_shell.c
app/src/modules/sensor/: CMakeLists.txt  Kconfig.sensor  sensor_module.c  sensor_module.h
app_2/: CMakeLists.txt  Kconfig  prj.conf
app_2/boards/: nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay
app_2/config/: memfault_platform_config.h
app_2/src/: main.c
app_2/src/cbor/: cbor_helper.c  cbor_helper.h
doc/: Doxyfile  conf.py  index.rst
doc/_doxygen/: main.md
drivers/: CMakeLists.txt
drivers/blink/: gpio_led.c
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/example_sensor/: example_sensor.c
drivers/sensor/sen0466/: CMakeLists.txt  Kconfig  sen0466.c  sen0466.h
dts/bindings/sensor/: dfrobot,sen0466.yaml
include/app/drivers/: blink.h
samples/sensor/sen0466/: CMakeLists.txt  README.md  prj.conf  (+1 more)
scripts/: example_west_command.py
zephyr/: module.yml
(+17 files in other folders)
